Removed ECM dependency, changed GWN version

--- a/src/meshlabplugins/filter_openvdb/CMakeLists.txt
+++ b/src/meshlabplugins/filter_openvdb/CMakeLists.txt
@@ -1,22 +1,19 @@
 set(CMAKE_CXX_STANDARD 17)
 
 find_package(OpenVDB REQUIRED)
-find_package(ECM REQUIRED NO_MODULE)
 find_package(TBB REQUIRED)
 find_package(Boost REQUIRED)
 find_package(EIGEN3 REQUIRED NO_MODULE)
 
 set(WINDING_DIR ${VCGDIR}/wrap/WindingNumber CACHE INTERNAL "")
-file(GLOB WNFILES ${WINDING_DIR}/*.cpp)
 
-set(SOURCES filter_openvdb.cpp ${WNFILES})
+set(SOURCES filter_openvdb.cpp)
 
 set(HEADERS filter_openvdb.h)
 
 add_meshlab_plugin(filter_openvdb ${SOURCES} ${HEADERS})
 
 set(EIGEN_DIR  = "${VCGDIR}/eigenlib" CACHE INTERNAL "")
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${ECM_FIND_MODULE_DIR})
 
 target_include_directories(filter_openvdb PRIVATE ${VCGDIR})
 target_include_directories(filter_openvdb PRIVATE ${TBB_INCLUDE_DIRS})
